--- a/Views/Libro_Vista/Libro_Vista.cshtml
+++ b/Views/Libro_Vista/Libro_Vista.cshtml
@@ -1,6 +1,6 @@
 ﻿<div>
     @{
-        ViewData["Title"] = "Home Page";
+        ViewData["Title"] = "Libro_Vista";
     }
     <!DOCTYPE html>
 
@@ -82,15 +82,10 @@
                             <table class="table" style="background-color:#FFFFFF">
                                 <thead>
                                     <tr>
+                                        @{ String categoria = ((IEnumerable<string>)Model).ElementAt(11);
+                                        }
                                         <th scope="col" class="border-0 bg-light px-0">
-                                            <div class="p-2 px-3 text-uppercase">
-                                                @foreach (var Libroslista in Model)
-                                                {
-                                                    @Libroslista
-
-
-                                                }
-                                            </div>
+                                            <div class="p-2 px-3 text-uppercase">Cocoteca/libros/@categoria</div>
                                         </th>
                                     </tr>
                                 </thead>
@@ -98,27 +93,33 @@
                                 <th scope="row" class="border-0">
                                     <div class="p-2">
                                         <div class="d-inline-block">
-                                            <img src="  @foreach (var Libroslista in Model)
-                                                {
-                                                    @Libroslista
-                                                }" height="400px" width="320px">
+
+                                            <img src=@foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(9))
+                                            {
+                                                            @Libroslista
+                                            } height="400px" width="320px">
                                         </div>
                                         <div class="ml-3 d-inline-block align-top">
+                                            <h2>
+                                                @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(1))
+                                                {
+                                                    @Libroslista
+                                                }
+                                            </h2>
                                             <div class="d-inline-block">
-                                                <h2>
-                                                    @foreach (var Libroslista in Model)
-                                                    {
-                                                        @Libroslista
-                                                    }
-                                                </h2>
+
                                                 <h5>
                                                     <footer class="blockquote-footer">
+                                                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(2))
+                                                        {
+                                                            @Libroslista
+                                                        }
                                                     </footer>
                                                 </h5><br>
                                                 <p>
                                                     <font>
                                                         <u> <b>ISBN:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(0))
                                                         {
                                                             @Libroslista
                                                         }
@@ -127,17 +128,16 @@
                                                 <p>
                                                     <font>
                                                         <u> <b>Editorial:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(10))
                                                         {
                                                             @Libroslista
                                                         }
-
                                                     </font>
                                                 </p>
                                                 <p>
                                                     <font>
                                                         <u> <b>Paginas:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(4))
                                                         {
                                                             @Libroslista
                                                         }
@@ -146,7 +146,7 @@
                                                 <p>
                                                     <font>
                                                         <u> <b>Año de Impresion:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(6))
                                                         {
                                                             @Libroslista
                                                         }
@@ -154,32 +154,31 @@
                                                 </p>
                                                 <p>
                                                     <font>
-                                                        <u> <b>No. Edicion:</b></u>
-                                                        @foreach (var Libroslista in Model)
-                                                        {
-                                                            @Libroslista
+                                                        <u> <b>Pais:</b></u>
+                                                        @{ String pais = ((IEnumerable<string>)Model).ElementAt(12);
                                                         }
+                                                        @pais
                                                     </font>
                                                 </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>Pais:</b></u> @foreach (var Libroslista in Model)
-                                                        {
-                                                            @Libroslista
-                                                        }
-                                                    </font>
-                                                </p>
-                                                <br><br>
                                             </div>
                                             <div class="ml-8 d-inline-block align-top">
-                                                <br><br>
+                                                <br>
                                                 <div class="card card-dos mb-5 mb-lg-0" style="width: 18rem; height:16rem;">
 
                                                     <div class="card-body">
+                                                        @{ String enStock = ((IEnumerable<string>)Model).ElementAt(8);
+                                                        }
+                                                        <h5 class="card-title text-muted text-uppercase text-center">
+                                                            @enStock
 
-                                                        <h5 class="card-title text-muted text-uppercase text-center">En Stock</h5>
+                                                        </h5>
 
-                                                        <h5 class="card-price text-center">$1,300</h5>
+                                                        <h5 class="card-price text-center">
+                                                            $@foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(7))
+                                                            {
+                                                                @Libroslista
+                                                            }
+                                                        </h5>
                                                         <hr>
                                                         <div class="box-1">
                                                             <div class="btn btn-dos ">
@@ -190,15 +189,17 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <br><br>
                                             <div class="card" style="width: 35rem;">
                                                 <div class="card-body">
                                                     <p><font><u> <b>Sinopsis:</b></u></font></p>
-                                                    @foreach (var Libroslista in Model)
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(3))
                                                     {
                                                         @Libroslista
                                                     }
                                                 </div>
                                             </div>
+                                            <br>
                                         </div>
                                     </div>
 
@@ -213,10 +214,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </body>
 </html>
 
