--- a/Views/Compras_Lista_hu113/ListaCompras_.cshtml
+++ b/Views/Compras_Lista_hu113/ListaCompras_.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -88,114 +86,100 @@
                             <tbody>
                             <th scope="row" class="border-0">
 
-                             
-
-                                  @{ int Longitud = Model.Count;
-                                  }
-                                
 
 
+                                @{ int Longitud = Model.Count;
+                                }
 
-                                @for (int i = 0; i < @Longitud / 7; i++)
+
+
+
+                                @for (int i = 0; i < @Longitud / 3; i++)
                                 {
 
-                                <div class="list-group">
-                                    <button type="button" class="list-group-item list-group-item-action active" disabled style="background-color:#ff9060	">
-                                        @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                                        {
-                                            @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j))
+                                    <div class="list-group">
+                                        <button type="button" class="list-group-item list-group-item-action active" disabled style="background-color:#ff9060	">
+                                            No. Pedido: 
+                                            @for (int j = i + (i * 2); j <= i + (i * 2); j++)
                                             {
-                                                @Libroslista
-                                            }
-                                        }
-
-
-                                    </button>
-                                    @for (int a = i + (i * 7); a <= i + (i * 7); a++)
-                                    {
-                                        int primero = 0;
-
-                                        @foreach (var Librote in Model)
-                                        {
-                                            if (Librote == Model[a])
-                                            {
-                                                if (primero==0)
+                                                @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j))
                                                 {
-                                                    <a class="dropdown-item" asp-controller="Compras_Lista_hu113" asp-action="Compras_Libro_Vista_"
-                                                       asp-route-id="@Librote"><li class="list-group-item">
-    <!-- Contenido-->
+                                                    @Libroslista
+                                                }
+                                            }
 
-                                           
 
-    <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-        <img src= @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                    {
-                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 3))
-                        {
-                            @Libroslista
-                        }
-                    } height="180px" width="120px">
-        <div class="ml-3 d-inline-block align-top">
-            <div class="media-body order-2 order-lg-1">
-                <h5 class="mt-0 font-weight-bold mb-2">
-                    @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                    {
-                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 1))
-                        {
-                            @Libroslista
-                        }
-                    }
-                </h5>
-                <p class="font-italic text-muted mb-0 small">
-                    @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                    {
-                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 2))
-                        {
-                            @Libroslista
-                        }
-                    }
-                </p>
-                <p class="font-italic text-muted mb-0 small">Vendido por: Cocoteca </p>
-                <p class="font-italic text-muted mb-0 small">
-                    Fecha de la compra:
-                    @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                    {
-                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 6))
-                        {
-                            @Libroslista
-                        }
-                    }
-                </p>
-                <br>
-                <h6 class="font-weight-bold my-2">
-                    Precio Total:
-                    @for (int j = i + (i * 7); j <= i + (i * 7); j++)
-                    {
-                        @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 5))
-                        {
-                            @Libroslista
-                        }
-                    }
-                </h6>
-                <br>
+                                        </button>
+                                        @for (int a = i + (i * 2); a <= i + (i * 2); a++)
+                                        {
+                                            int primero = 0;
 
-            </div>
-        </div>
-    </div> <!-- fin del pedido -->
-</li></a>
-                                                    primero = 1;
+                                            @foreach (var Librote in Model)
+                                            {
+                                                if (Librote == Model[a])
+                                                {
+                                                    if (primero == 0)
+                                                    {
+                                                        <a class="dropdown-item" asp-controller="Compras_Libro_Vista_hu114" asp-action="Compras_Libro_Vista_"
+                                                           asp-route-id="@Librote">
+                                                            <li class="list-group-item">
+                                                                <!-- Contenido-->
+
+
+
+                                                                <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                                                                    
+                                                                    <div class="ml-3 d-inline-block align-top">
+                                                                        <div class="media-body order-2 order-lg-1">
+                                                                            <h5 class="mt-0 font-weight-bold mb-2">
+                                                                              
+                                                                            </h5>
+                                                                            <p class="font-italic text-muted mb-0 small">
+                                                                              
+                                                                            </p>
+                                                                            <p class="font-italic text-muted mb-0 small">Vendido por: Cocoteca </p>
+                                                                            <p class="font-italic text-muted mb-0 small">
+                                                                                Fecha de la compra:
+                                                                                @for (int j = i + (i * 2); j <= i + (i * 2); j++)
+                                                                                {
+                                                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j+1))
+                                                                                    {
+                                                                                        @Libroslista
+                                                                                    }
+                                                                                }
+                                                                            </p>
+                                                                            <br>
+                                                                            <h6 class="font-weight-bold my-2">
+                                                                                Estado : 
+                                                                                @for (int j = i + (i * 2); j <= i + (i * 2); j++)
+                                                                                {
+                                                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 2))
+                                                                                    {
+                                                                                        @Libroslista
+                                                                                    }
+                                                                                }
+
+                                                                            </h6>
+                                                                            <br>
+
+                                                                        </div>
+                                                                    </div>
+                                                                </div> <!-- fin del pedido -->
+                                                            </li>
+                                                        </a>
+                                                        primero = 1;
+                                                    }
+
                                                 }
 
-                                            }
 
+                                            }
 
                                         }
 
-                                    }
-                                    
-                                        
-                                    
-                                </div>
+
+
+                                    </div>
                                     <br>
                                 }
                                 A
@@ -242,4 +226,3 @@
 
 </body>
 </html>
-
